--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+#spring.jpa.show-sql=true
 
+#Show SQL
+spring.jpa.properties.hibernate.show_sql=true
+
+#Format SQL
+spring.jpa.properties.hibernate.format_sql=true
+
+#Show Parameter Values - below 3
+#logging.level.org.hibernate.type.discripter.sql=trace
+
+#Show Parameter Values - above 3
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
