Basic jpa testing L1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #Show Parameter Values - above 3
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
+
+spring.h2.console.enabled=true
